# prueba-tecnica-ia

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  documents.py  files.py  history.py  web.py
app/core/: config.py  security.py  time_utils.py
app/db/: base.py  init_db.py  session.py
app/models/: document.py  upload.py
app/schemas/: auth.py  documents.py  files.py
app/services/: ai.py  document_analysis.py  events.py  interfaces.py  repository.py  storage.py  validation.py
templates/: analysis.html  history.html
tests/: test_document_analysis.py
